# aaa

.trae/documents/: math_plotter_plan.md  math_plotter_refactor_plan.md
.trae/specs/fix-canvas-auto-scale/: checklist.md  spec.md  tasks.md
.trae/specs/polar-grid-and-force-polar/: checklist.md  spec.md  tasks.md
.trae/specs/polar-hover-info/: checklist.md  spec.md  tasks.md
math_plotter/: README.md  pyproject.toml  requirements.txt
math_plotter/app/: main.py
math_plotter/app/core/: evaluator.py  parser.py
math_plotter/app/models/: function_model.py
math_plotter/app/plotting/: canvas.py
math_plotter/app/services/: export_service.py  storage_service.py
math_plotter/app/ui/: main_window.py
math_plotter/app/utils/: math_utils.py
math_plotter/math_plotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
math_plotter/tests/: test_evaluator.py  test_parser.py  test_storage.py
