[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "math_plotter"
version = "0.1.0"
description = "A professional mathematical plotting desktop application."
authors = [
    {name = "User", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6==6.7.2",
    "sympy>=1.12",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyqtgraph>=0.13.3",
    "scikit-image>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[project.scripts]
math-plotter = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
